		* Improved axis ticks location. They don't need to be always placed at the edges of the axis if does not look nicely (!700)
		* Allow to position the center and limit lines in the process behavior chart based on user-defined specifications
		* Additionally to using the colors for plots from the current theme palette, allow to use colors from a specified color map
	* [import]
		* Import directories - import multiple files in a directory in one single step
		* Allow to import arrays in JSON files that contain plain data only
	* [examples]
		* Added "All" in the examples dialog to navigate and search in the example projects from _all_ collections

Performance improvements:
		* Improved drawing performance (!731)
		* Improved the performance of importing JSON files with a large number of elements

Bug fixes:
	* Fix displayed locale of constants
	* Rename of psi constant to psqi to avoid clash with psi function
	* Fix crash when loading a project with a workbook as first child (!787)
	* Fix updating column count in spreadsheet dock when importing data from file
	* Fix appending data to spreadsheets from XLSX files
	* Fix the bar chart with log-scales

-----2.12.1 (2025-08-15) -----
Bug fixes:
	* Fix using default font for axis title
	* Fix build with system QXlsx (!693)
	* Fix build with system QADS 4.4 (!694)
	* Crash on import when no projects opened (BUG 503800)
	* Save rotation of axis title seperately for x and y axis
	* Fix disappearing axis ticks (#1146)
	* Don't crash when creating the data spreadsheet for analysis curves (BUG 504662)
	* Fix crash when aspect is added and all docks in content area are hidden (BUG 504794, 502043)
	* Fix crash when column or row was added to spreadsheet from toolbar and no column or row was selected (BUG 504839)
	* Fix issue when the statistics spreadsheet was not shown if the spreadsheet was a child of workbook
	* Fix issue which caused the context menu of an aspect to not be shown after being reparented