@@ -1040,6 +1040,8 @@ void XYCurvePrivate::recalc() {
 	const int rows = xColumn->rowCount();
 	m_logicalPoints.reserve(rows);
 
+	const double yOffset = m_plot->curveChildIndex(q) * m_plot->stackYOffset();
+
 	// take only valid and non masked points
 	for (int row = 0; row < rows; row++) {
 		// DEBUG("row = " << row << " valid x/y = " << xColumn->isValid(row) << " " << yColumn->isValid(row))
@@ -1067,7 +1069,7 @@ void XYCurvePrivate::recalc() {
 
 			switch (yColMode) {
 			case AbstractColumn::ColumnMode::Double:
-				tempPoint.setY(yColumn->doubleAt(row));
+				tempPoint.setY(yColumn->doubleAt(row) + yOffset);
 				break;
 			case AbstractColumn::ColumnMode::Integer:
 				tempPoint.setY(yColumn->integerAt(row));
@@ -2407,7 +2409,7 @@ bool XYCurve::minMax(const Dimension dim, const Range<int>& indexRange, Range<do
 					  r,
 					  includeErrorBars);
 	case Dimension::Y:
-		return minMax(yColumn(),
+		bool rc = minMax(yColumn(),
 					  xColumn(),
 					  d->errorBar->yErrorType(),
 					  d->errorBar->yPlusColumn(),
@@ -2415,6 +2417,8 @@ bool XYCurve::minMax(const Dimension dim, const Range<int>& indexRange, Range<do
 					  indexRange,
 					  r,
 					  includeErrorBars);
+		r.setEnd(r.end() + plot()->curveChildIndex(this) * plot()->stackYOffset());
+		return rc;
 	}
 	return false;
 }
